--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-myconnection": "^1.0.4",
+    "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
