--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pm2": "^4.5.6",
+    "request": "^2.88.2",
     "save": "^2.4.0"
   }
 }
